// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component Should have card classname 1`] = `
<div
  className="card"
  style={Object {}}
>
  Card Content
</div>
`;

exports[`Card component Should have card-content classname 1`] = `
<div
  className="card-content"
  style={Object {}}
>
  Content
</div>
`;

exports[`Card component Should have card-image classname 1`] = `
<div
  className="card-image"
  style={Object {}}
>
  <figure
    className="image is-4by3"
    style={Object {}}
  >
    <img
      alt=""
      onError={[Function]}
      src="http://bulma.io/images/placeholders/1280x960.png"
    />
  </figure>
</div>
`;
